--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,8 +28,8 @@ python-dotenv==1.0.0
 # Templates
 jinja2==3.1.3
 
-# HTTP Client
-httpx>=0.24,<0.26
+# HTTP Client (compatible with supabase 2.12.0)
+httpx>=0.26,<0.29
 
 # Testing
 pytest==7.4.4
